# history

./: .gitignore  .gitmodules  README.md  export.py  history  pyproject.toml
index/: aspdict.en.rws  idxstatus.txt  mimemap  recoll.conf  recollindex
index/search/: pyproject.toml  webui.py
proxy/: history.py  pyproject.toml
search/: pyproject.toml
