[project]
name = ""
version = ""
description = ""
authors = [
    {name = "DUOLabs333", email = "dvdugo333@gmail.com"},
]
dependencies = [
    "mitmproxy~=7.0",
    "bs4~=0.0",
    "setuptools>=60.2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
